--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.11.0",
     "@types/node": "18.15.5",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
@@ -34,6 +35,7 @@
     "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
     "swr": "^2.1.1",
+    "vercel": "^31.2.0",
     "world-countries": "^4.0.0",
     "zustand": "^4.3.6"
   },
